infra/microk8s/base/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.17
          ports:
            - containerPort: 5501
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin-system
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5501
      targetPort: 5501
  selector:
    app: pgadmin
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-route
  namespace: pgadmin-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
  hostnames:
    - "pgadmin.etsoo.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pgadmin-service
          port: 5501
